k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-lpg-ingress
  namespace: smart-lpg
spec:
  ingressClassName: nginx
  rules:
    - host: smartlpg.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
